# Memorial-diary

./: .env.example  .gitignore  README.md
book/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
book/bookprintapi/: __init__.py  async_client.py  books.py  contents.py  covers.py  credits.py  exceptions.py  orders.py  photos.py  response.py  webhook.py
book/examples/: server_pipeline.py  simple_books.py  simple_credits.py  simple_orders.py  webhook_receiver.py
photobook-app/: .gitignore
photobook-app/backend/: .env.example  app.py  requirements-deoldify.txt  requirements-sd.txt  requirements.txt
photobook-app/backend/services/: book_contents_normalize.py  colorization.py  sweetbook_service.py
photobook-app/frontend/: index.html  package-lock.json  vite.config.ts
photobook-app/frontend/src/: App.tsx  api.ts  index.css
photobook-app/frontend/src/components/: BookEditorShell.tsx  ContentInsertedStrip.tsx  PipelineRoute.tsx  TemplateParameterForm.tsx  TemplatePreviewBlock.tsx  UploadedPhotoThumb.tsx
photobook-app/frontend/src/context/: AppContext.tsx
photobook-app/frontend/src/demo/: demoData.ts
photobook-app/frontend/src/hooks/: useBookServerPhotos.ts  useSweetbookTemplateParameters.ts  useTemplatesForBookSpec.ts
photobook-app/frontend/src/pages/: BookSetupPage.tsx  ColorizePage.tsx  ContentsPage.tsx  CoverPage.tsx  LandingPage.tsx  ManageBooksOrdersPage.tsx  OrderDetailPage.tsx  OrderPage.tsx  PhotosUploadPage.tsx
photobook-app/frontend/src/utils/: bookAssetParse.ts  contentInsertFingerprint.ts  orderEstimate.ts  orderShipping.ts  (+6 more)
